recieved initial JSON object with information

--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
   <link rel="stylesheet" href="build/css/styles.css">
   <script src="build/js/vendor.min.js"></script>
   <script type="text/javascript" src="build/js/app.js"></script>
-  <title>Weather</title>
+  <title>GH API</title>
 </head>
 
 <body>
-  < </body>
+  <div class="container">
+    <h1>Explore GitHub Repositories!</h1>
+    <label for="userName">Enter a GitHub username</label>
+    <input id="usernName" type="text">
+    <button class="btn-success" id="repo">Get Repo Details!</button>
+    <div class="showRepo"></div>
+  </div>
+</body>
 
 </html>
