fixed typo, repo object will display correct data

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 
 <body>
   <div class="container">
+
     <h1>Explore GitHub Repositories!</h1>
-    <label for="userName">Enter a GitHub username</label>
-    <input id="usernName" type="text">
+
+    <label for="username">Enter a GitHub username</label>
+    <input id="username" type="text">
+
     <button class="btn-success" id="repo">Get Repo Details!</button>
+
     <div class="showRepo"></div>
+    
   </div>
 </body>
 
