it will show description

--- a/index.html
+++ b/index.html
@@ -22,16 +22,14 @@
 
     <div class="row">
       <div class="col-md-6">
-        <div class="showuser"></div>
+        <div class="showUser"></div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="showRepos"></div>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-6">
-        <div class="showrepos"></div>
-      </div>
-    </div>
-    
   </div>
 </body>
 
